--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Begin Jekyll SEO tag v2.3.0 -->
-<title>wojtek-kalicinski.github.io</title>
+<title>Habeeb</title>
 <meta property="og:title" content="wojtek-kalicinski.github.io" />
 <meta property="og:locale" content="en_US" />
 <link rel="canonical" href="http://wojtek-kalicinski.github.io/" />
