--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
 <!-- Begin Jekyll SEO tag v2.3.0 -->
 <title>Habeeb</title>
-<meta property="og:title" content="wojtek-kalicinski.github.io" />
+<meta property="og:title" content="habeebrahmanpt.github.io" />
 <meta property="og:locale" content="en_US" />
-<link rel="canonical" href="http://wojtek-kalicinski.github.io/" />
-<meta property="og:url" content="http://wojtek-kalicinski.github.io/" />
-<meta property="og:site_name" content="wojtek-kalicinski.github.io" />
+<link rel="canonical" href="http://habeebrahmanpt.github.io/" />
+<meta property="og:url" content="http://habeebrahmanpt.github.io/" />
+<meta property="og:site_name" content="habeebrahmanpt.github.io" />
 <script type="application/ld+json">
-{"name":"wojtek-kalicinski.github.io","description":null,"author":null,"@type":"WebSite","url":"http://wojtek-kalicinski.github.io/","image":null,"publisher":null,"headline":"wojtek-kalicinski.github.io","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
+{"name":"habeebrahmanpt.github.io","description":null,"author":null,"@type":"WebSite","url":"http://habeebrahmanpt.github.io/","image":null,"publisher":null,"headline":"wojtek-kalicinski.github.io","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <link href="/assets/css/style.css?v=cad5d45e3a1157c03337fc4c90bb507ede165c4a" rel="stylesheet">
@@ -21,7 +21,7 @@
     <div class="container-lg px-3 my-5 markdown-body">
       
 
-      <h1 id="wojtek-kalicinskigithubio">wojtek-kalicinski.github.io</h1>
+      <h1 id="wojtek-kalicinskigithubio">habeebrahmanpt.github.io</h1>
 
 
       
