--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:url" content="http://habeebrahmanpt.github.io/" />
 <meta property="og:site_name" content="habeebrahmanpt.github.io" />
 <script type="application/ld+json">
-{"name":"habeebrahmanpt.github.io","description":null,"author":null,"@type":"WebSite","url":"http://habeebrahmanpt.github.io/","image":null,"publisher":null,"headline":"wojtek-kalicinski.github.io","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
+{"name":"habeebrahmanpt.github.io","description":null,"author":null,"@type":"WebSite","url":"http://habeebrahmanpt.github.io/","image":null,"publisher":null,"headline":"habeebrahmanpt.github.io","dateModified":null,"datePublished":null,"sameAs":null,"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <link href="/assets/css/style.css?v=cad5d45e3a1157c03337fc4c90bb507ede165c4a" rel="stylesheet">
