Date fix and git url added

--- a/index.html
+++ b/index.html
@@ -758,6 +758,17 @@
                          <span class="sidebar--label">LinkedIn</span><br>
                          https://www.linkedin.com/in/habeeb-rahman-pt-950945132/
                     </li>
+                      <li class="sidebar--item sidebar--item-personal">
+                         <svg class="sidebar--item-icon" fill="#000000" height="24" viewBox="0 0 24 24" width="24"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path d="M0 0h24v24H0z" fill="none"></path>
+                              <path
+                                   d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z">
+                              </path>
+                         </svg>
+                         <span class="sidebar--label">Git hub</span><br>
+                         https://github.com/habeebrahmanpt
+                    </li>
 
                </ul>
 
@@ -819,7 +830,7 @@
                          </div>
                          <div class="section--time-line-hide-overlay"></div>
                          <div class="section--heading-group">
-                              <div class="section--date">Aug 2019 - Aug 2021</div>
+                              <div class="section--date">Aug 2019 - present </div>
                               <div class="section--heading">
                                    <h3>Senior Software Engineer</h3>
                               </div>
