--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                         <path d="M0 0h24v24H0z" fill="none"></path>
                     </svg>
                     <span class="sidebar--label">Address</span><br>
-                    Pallattil thekkethodi, Nellikuth(PO),Manjeri , Malappuram, Kerala PIN:676122 <br>
+                    Pallattil Thekkethodi House, Nellikuth(PO),Manjeri , Malappuram, Kerala PIN:676122 <br>
                     INDIA
                 </li>
 
@@ -742,7 +742,7 @@
                         </path>
                     </svg>
                     <span class="sidebar--label">Phone number</span><br>
-                    08089578788
+                    +91 8089578788
                 </li>
                 <li class="sidebar--item sidebar--item-personal">
                     <svg class="sidebar--item-icon" fill="#000000" height="24" viewBox="0 0 24 24" width="24"
@@ -774,8 +774,10 @@
                             d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z">
                         </path>
                     </svg>
-                    <span class="sidebar--label">LinkedIn</span><br>
-                    <a href="https://www.linkedin.com/in/habeeb-rahman-pt-950945132/">https://www.linkedin.com/in/habeeb-rahman-pt-950945132</a>
+                    <span class="sidebar--label"><a href="https://www.linkedin.com/in/habeebrahmanpt">LinkedIn</a> </span><br>
+                    https://www.linkedin.com
+                    /in/habeebrahmanpt
+                    <!-- <a href="https://www.linkedin.com/in/habeebrahmanpt"></a> -->
 
                 </li>
                 <li class="sidebar--item sidebar--item-personal">
@@ -786,9 +788,9 @@
                             d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z">
                         </path>
                     </svg>
-                    <span class="sidebar--label">Git Hub</span><br>
-                    <a href="https://github.com/habeebrahmanpt">https://github.com/habeebrahmanpt</a>
-
+                    <span class="sidebar--label"><a href="https://github.com/habeebrahmanpt">Git Hub</a></span><br>
+                      https://github.com
+                      /habeebrahmanpt
                 </li>
 
             </ul>
