--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 
 </head>
 
-<body class="c--434a54" style="overflow: hidden !important;">
+<body class="c--434a54">
 
     <div class="sidebar--bg"></div>
 
@@ -853,7 +853,7 @@
                     </div>
                     <div class="section--time-line-hide-overlay"></div>
                     <div class="section--heading-group">
-                        <div class="section--date">Aug 2019 - Percent</div>
+                        <div class="section--date">Aug 2019 - present</div>
                         <div class="section--heading">
                             <h3>Senior Software Engineer</h3>
                         </div>
